--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
     "resume_path": "full local path to your resume in PDF format",
     "search_queries": [
         {
-            "keywords": "Data engineer",
-            "location": "Japan",
+            "keywords": "Data Analyst",
+            "location": "Singapore",
             "f_WT": ""
         }
     ],
