Added a new UI, maintestv2zx, and brand logos
Added a new UI and maintestv2zx to try

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "resume_path": "full local path to your resume in PDF format",
     "search_queries": [
         {
-            "keywords": "Computer Engineer",
+            "keywords": "data engineer",
             "location": "Singapore",
             "f_WT": ""
         }
