--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "resume_path": "full local path to your resume in PDF format",
     "search_queries": [
         {
-            "keywords": "Data scientist",
+            "keywords": "Data Scientist",
             "location": "Singapore",
             "f_WT": ""
         }
@@ -26,5 +26,5 @@
     "rounds": 3,
     "days_to_scrape": 10,
     "app_table": "jobs",
-    "form_submitted": false
+    "form_submitted": true
 }
